--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "doctrine/dbal": "^2.5",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "zizaco/entrust": "5.2.x-dev"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
