--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/cashier": "~7.0",
         "laravel/dusk": "^1.1",
         "laravel/framework": "5.4.*",
+        "laravel/passport": "^2.0",
         "laravel/socialite": "^3.0",
         "laravel/tinker": "~1.0",
         "zizaco/entrust": "5.2.x-dev"
