--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
     "/css/app.css": "/css/app.css?id=d41d8cd98f00b204e980",
-    "/js/coming-soon.min.js": "/js/coming-soon.min.js?id=a0d1516152ca1fb41a10"
+    "/js/coming-soon.min.js": "/js/coming-soon.min.js?id=a0d1516152ca1fb41a10",
+    "/js/inbox.min.js": "/js/inbox.min.js?id=fa7fe5775f6ef8039851"
 }
