Mix compiled files

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/css/app.css": "/css/app.css?id=d41d8cd98f00b204e980",
+    "/js/app.js": "/js/app.js?id=3ac98bad6edeff64d3bb",
+    "/css/app.css": "/css/app.css?id=b9cb5c393f3dcc0fb457",
     "/js/coming-soon.min.js": "/js/coming-soon.min.js?id=a0d1516152ca1fb41a10",
     "/js/inbox.min.js": "/js/inbox.min.js?id=fa7fe5775f6ef8039851",
     "/css/lock-2.min.css": "/css/lock-2.min.css?id=c05cc2e2aff3c36ccadf",
